# PLU_Chatbot

./: .env  README.md  Readme.md  app.py  env.py  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
utils/: authent.py  entities.py  faq.py  google_vertex.py  session.py  system_prompts.py  theming.py  utils.py
utils/backend/: pdf_process.py
utils/data/: PLU-de-PORNIC_Reglement_processed.json
utils/widgets/: __init__.py  chat_container.py  display_containers.py  streamed_write.py  style.py  tags_header.py
