[project]
name = "plu-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.47.1",
    "pypdf2>=3.0.0",
    "python-dotenv>=1.0.0",
    "chromadb>=1.0.15",
    "vertexai>=1.71.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-vertexai>=2.0.9",
    "st-theme>=1.2.3",
]

[tool.poetry.dependencies]
streamlit = "^1.0.0"
